return counts only, refactor code to use counts instead of ids (incomplete)